cabal-version:      3.0
name:               on-chain
version:            0.1.0.0

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    NoFieldSelectors
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

library
  import:          lang
  exposed-modules: 
    AlwaysSucceeds

  build-depends:
    , base
    , plutus-core
    , plutus-tx
    , plutus-tx-plugin
    , plutus-ledger-api
    , plutus-core

  hs-source-dirs:  src

executable on-chain
  import:         lang
  main-is:        Main.hs

  build-depends:
    , base
    , on-chain

  hs-source-dirs: export
