cabal-version:      3.0
name:               seath
version:            0.0.0.1
author:             MLabs
maintainer:         MLabs
copyright:          MLabs
category:           Web
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
     -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialize -fno-strictness
    -fno-warn-orphans -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors
    -Wmissing-import-lists
    -- -Werror 

  build-depends:      base ^>=4.14
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common
  exposed-modules: 
    AdditionValidator
    Serialize
    
  other-modules:
  build-depends:
    , deriving-compat
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , cardano-api
    , serialise
    , bytestring
    , text

  hs-source-dirs:  src

executable  script-export
  import:         common
  main-is:        Main.hs
  build-depends:
    , base
    , seath


  hs-source-dirs: script-export

executable  architecture-proto
  import:         common
  main-is:        Main.hs
  build-depends:
    , base
    , async
    , stm


  hs-source-dirs: architecture-proto
